--- a/InternSotatek.Personal.Api/appsettings.json
+++ b/InternSotatek.Personal.Api/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Secret": "a9Dk!4fG2hJ8kLmN3pQrS6tUvWxYz123",
+    "Issuer": "ProjectPersonal",
+    "Audience": "ProjectPersonalLogin",
+    "ExpiresInMinutes": 15
+  },
+
   "AllowedHosts": "*"
 }
