--- a/InternSotatek.Personal.Application/InternSotatek.Personal.Application.csproj
+++ b/InternSotatek.Personal.Application/InternSotatek.Personal.Application.csproj
@@ -9,10 +9,15 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\InternSotatek.Personal.Infrastructure\InternSotatek.Personal.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Roles\Usecases\Queries\" />
   </ItemGroup>
 
 </Project>
