--- a/src/InternSotatek.Personal.Api/InternSotatek.Personal.Api.csproj
+++ b/src/InternSotatek.Personal.Api/InternSotatek.Personal.Api.csproj
@@ -15,6 +15,8 @@
         <PackageReference Include="Serilog.Sinks.File" />
         
         <PackageReference Include="Swashbuckle.AspNetCore" />
+        
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
